<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Fragments.PrayerTimeFragment">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_prayer_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/prayer_time_shimmer"/>
    </com.facebook.shimmer.ShimmerFrameLayout>
    <RelativeLayout
        android:id="@+id/container_Relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

    <RelativeLayout
        android:id="@+id/date_relative"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/_2sdp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />
        <TextView
            android:id="@+id/date_hujr"
            android:textSize="@dimen/_14ssp"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/date_tv"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:background="@android:color/darker_gray"
            android:layout_below="@id/date_hujr" />
    </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/date_relative"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingEnd="0dp"
                    android:text="@string/fajr"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp" />

                <TextView
                    android:id="@+id/Fajr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/_10sdp"
                    android:paddingStart="0dp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp"
                    app:drawableEndCompat="@drawable/ic_notifications_off" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingEnd="0dp"
                    android:text="@string/sunrise"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp" />

                <TextView
                    android:id="@+id/Sunrise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/_10sdp"
                    android:paddingStart="0dp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp"
                    app:drawableEndCompat="@drawable/ic_notifications_off" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingEnd="0dp"
                    android:text="@string/dhuhr"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp" />

                <TextView
                    android:id="@+id/Dhuhr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/_10sdp"
                    android:paddingStart="0dp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp"
                    app:drawableEndCompat="@drawable/ic_notifications_off" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingEnd="0dp"
                    android:text="@string/asr"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp" />

                <TextView
                    android:id="@+id/Asr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/_10sdp"
                    android:paddingStart="0dp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"
                    app:drawableEndCompat="@drawable/ic_notifications_off" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingEnd="0dp"
                    android:text="@string/magrhib"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp" />

                <TextView
                    android:id="@+id/Magrhib"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/_10sdp"
                    android:paddingStart="0dp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"
                    app:drawableEndCompat="@drawable/ic_notifications_off" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingEnd="0dp"
                    android:text="@string/isha"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp" />

                <TextView
                    android:id="@+id/Isha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/_10sdp"
                    android:paddingStart="0dp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"
                    app:drawableEndCompat="@drawable/ic_notifications_off" />
            </LinearLayout>
        </LinearLayout>
</RelativeLayout>


</RelativeLayout>